<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_item_into_A"
        android:title="@string/to_slot_1"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/menu_item_into_B"
        android:title="@string/to_slot_2"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/menu_item_into_system"
        android:title="@string/to_system_slot"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/menu_item_convert_values"
        android:icon="@drawable/ic_convert_to_doubles"
        android:title="@string/convert_to_doubles"
        app:showAsAction="ifRoom" />

</menu>